Fix #1749: SpeedTest use eCharts for gauges (#1750)